# AirTIO

./: .travis.yml  Doxyfile  README.md  audio_river_build.html  audio_river_config_file.html  audio_river_feedback.html  audio_river_read.html  audio_river_write.html  doxy_audio-river.py  index.html  lutin_airtio.py  lutin_airtio_test.py  lutin_audio-river-test.py  lutin_audio-river.py  lutin_audio_river.py  lutin_audio_river_test.py  lutin_river.py  lutin_river_test.py  monk_river.py  pages.html
airtio/: Interface.cpp  Interface.h  Manager.cpp  Manager.h  debug.cpp  debug.h  debugRemove.h
airtio/io/: Manager.cpp  Manager.h  Node.cpp  Node.h
audio/river/: Interface.cpp  Interface.h  Interface.hpp  Manager.cpp  Manager.h  Manager.hpp  debug.cpp  debug.h  debug.hpp  debugRemove.h  debugRemove.hpp  river.cpp  river.h  river.hpp
audio/river/io/: Group.cpp  Group.h  Group.hpp  Manager.cpp  Manager.h  Manager.hpp  Node.cpp  Node.h  Node.hpp  NodeAEC.cpp  NodeAEC.h  NodeAEC.hpp  NodeFile.cpp  NodeFile.h  NodeFile.hpp  NodeMuxer.cpp  NodeMuxer.h  NodeMuxer.hpp  NodeOrchestra.cpp  NodeOrchestra.h  NodeOrchestra.hpp  NodePortAudio.cpp  NodePortAudio.h  NodePortAudio.hpp
catkin/: CMakeLists.txt  package.xml
data/: hardware.json  hardwareIOs.json  hardwareLinux.json  hardwareMacOs.json  hardwareNao.json  hardwareWindows.json  virtual.json
doc/: 001_bases.bb  build.md  configFile.md  feedback.md  index.bb  mainpage.md  read.md  write.md
doc/tutorial/: 000_Build.bb  001_Read.bb  002_Write.bb  003_FeadBack.bb  004_ConfigurationFile.bb
river/: CircularBuffer.cpp  CircularBuffer.h  Interface.cpp  Interface.h  Manager.cpp  Manager.h  debug.cpp  debug.h  debugRemove.h  river.cpp  river.h
river/io/: Group.cpp  Group.h  Manager.cpp  Manager.h  Node.cpp  Node.h  NodeAEC.cpp  NodeAEC.h  NodeAirTAudio.cpp  NodeAirTAudio.h  NodeMuxer.cpp  NodeMuxer.h  NodePortAudio.cpp  NodePortAudio.h
sample/ioViewer/: lutin_ioViewer.py
sample/ioViewer/appl/: Windows.cpp  Windows.h  Windows.hpp  debug.cpp  debug.h  debug.hpp  main.cpp
sample/read/: lutin_river-sample-read.py  lutin_river_sample_read.py  main.cpp  read.cpp
sample/write/: lutin_river-sample-write.py  lutin_river_sample_write.py  main.cpp  write.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_d.js  all_f.js  classes_d.js  pages_0.js  pages_1.js  pages_3.js  pages_5.js
test/: debug.h  main.cpp  testAEC.cpp  testAEC.h  testAEC.hpp  testEchoDelay.cpp  testEchoDelay.h  testEchoDelay.hpp  testFormat.cpp  testFormat.h  testFormat.hpp  testMuxer.cpp  testMuxer.h  testMuxer.hpp  testPlaybackCallback.cpp  testPlaybackCallback.h  testPlaybackCallback.hpp  testPlaybackWrite.cpp  testPlaybackWrite.h  testPlaybackWrite.hpp  testRecordCallback.cpp  testRecordCallback.h  testRecordCallback.hpp  testRecordRead.cpp  testRecordRead.h  testRecordRead.hpp  testVolume.cpp  testVolume.h  testVolume.hpp
test/catkin/: CMakeLists.txt  package.xml
tool/recoWord/appl/: Windows.cpp  Windows.hpp  main.cpp
tool/recoWord/appl/widget/: DataViewer.cpp  DataViewer.hpp
widget/: lutin_audio-river-widget.py
widget/audio/river/widget/: TemporalViewer.cpp  TemporalViewer.h  TemporalViewer.hpp  debug.cpp  debug.h  debug.hpp
